Squashing UI rendering & state bugs

--- a/imports/ui/pages/lanes/lanes.css
+++ b/imports/ui/pages/lanes/lanes.css
@@ -85,6 +85,7 @@ table tbody tr:nth-child(odd) {
   margin-top: -25px;
   left: 0;
   display: none;
+  text-align: center;
 }
 
 .admin.active {
