--- a/imports/ui/pages/lanes/ship_lane/ship_lane.css
+++ b/imports/ui/pages/lanes/ship_lane/ship_lane.css
@@ -109,3 +109,13 @@ pre {
   border-color: #0af;
   border-right-color: transparent;
 }
+
+.salvage-plan-link:hover,
+.followup-link {
+  color: #0af;
+}
+
+.salvage-plan-link {
+  color: #ffae00;
+}
+
